--- a/frontend/pets/angular.json
+++ b/frontend/pets/angular.json
@@ -34,7 +34,7 @@
               "entry": "server.ts"
             }
           },
-          "configurations": {
+          "configurations": {            
             "production": {
               "budgets": [
                 {
@@ -53,7 +53,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
